crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__events__after_last_event_asc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=5,tx=8,ev=0) wm.cp=4 | end=QUERY_END_REASON_LEDGER_TIP
